--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-results-list/css/module-results-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-results-list/css/module-results-list.css
@@ -15,7 +15,7 @@
 
 .results-list__disclaimer { border-top: 3px solid #EEF0F2; padding: 20px 0; }
 
-.results-list__bottom { margin-top: 40px; }
+.results-list__bottom { margin-top: 80px; }
 
 @media screen and (min-width: 992px) { .results-list { margin-bottom: 90px; } }
 
@@ -25,7 +25,9 @@
 
 .results-list-submodule__image { border: 1px solid #EEF0F2; background: #F8F8F8; padding: 1rem; }
 
-.results-list-submodule__date { color: #98A4AE; font-style: italic; }
+.results-list-submodule__date { color: #98A4AE; font-style: italic; margin-bottom: 3px; }
+
+.results-list-submodule__document { margin-bottom: 1px; }
 
 .results-list-submodule__secondary-links { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; }
 
@@ -33,7 +35,7 @@
 
 .results-list-submodule__name .icon { margin-left: 10px; }
 
-.results-list-submodule__description, .results-list-submodule__url, .results-list-submodule__link-list { margin-bottom: 12px; }
+.results-list-submodule__description, .results-list-submodule__url, .results-list-submodule__link-list { margin-bottom: 10px; }
 
 .results-list-submodule__url { word-wrap: break-word; }
 
@@ -46,9 +48,10 @@
   .results-list-submodule__image-wrapper { margin-bottom: 20px; }
   .results-list-submodule__image { width: 100%; max-width: 260px; } }
 
-@media screen and (min-width: 992px) { .results-list-submodule { margin-bottom: 40px; }
+@media screen and (min-width: 992px) { .results-list-submodule { margin-bottom: 38px; }
   .results-list-submodule__image-wrapper { min-width: 140px; margin-right: 30px; padding-top: 8px; }
   .results-list-submodule__image { max-width: 140px; }
   .results-list-submodule__content-wrapper { width: 100%; }
+  .results-list-submodule.results-list-submodule--type-resource { margin-bottom: 44px; }
   .results-list-submodule__icon-wrapper { width: 48px; margin-right: 30px; padding-top: 8px; }
   .results-list-submodule__icon-wrapper .icon { color: #005EB8; font-size: 48px; } }
