[Font-size-updates]   M52 - Icon List - Highlights Statement

--- a/eaton.frontend/src/components/icon-list/css/views/_view-no-image-highlights.scss
+++ b/eaton.frontend/src/components/icon-list/css/views/_view-no-image-highlights.scss
@@ -42,17 +42,16 @@
     }
 
     &__text {
-      font-size: 3.125em;
-      line-height: 55px;
+      font-size: 5rem;
+      line-height: 5.5rem;
     }
 
     &__symbol {
-      font-size: 0.6em;
+      font-size: 3rem;
       top: -15px;
     }
 
     &__title {
-      font-size: 0.875em;
       margin-bottom: 5px;
     }
   }
@@ -87,17 +86,16 @@
     }
 
     &__text {
-      font-size: 3.75em;
-      line-height: 65px;
+      font-size: 6rem;
+      line-height: 6.5rem;
     }
 
     &__symbol {
-      font-size: 0.667em;
+      font-size: 4rem;
       top: -15px;
     }
 
     &__title {
-      font-size: 1.125em;
       margin-bottom: ($spacing__sm / 2);
     }
   }
