--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/icon-list/css/icon-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/icon-list/css/icon-list.css
@@ -53,9 +53,9 @@
 @media screen and (max-width: 991px) { .icon-list-no-image-highlights { padding: 30px 0; }
   .icon-list-no-image-highlights__item { margin-bottom: 40px; }
   .icon-list-no-image-highlights__item:last-child { margin-bottom: 0; }
-  .icon-list-no-image-highlights__text { font-size: 3.125em; line-height: 55px; }
-  .icon-list-no-image-highlights__symbol { font-size: 0.6em; top: -15px; }
-  .icon-list-no-image-highlights__title { font-size: 0.875em; margin-bottom: 5px; } }
+  .icon-list-no-image-highlights__text { font-size: 5rem; line-height: 5.5rem; }
+  .icon-list-no-image-highlights__symbol { font-size: 3rem; top: -15px; }
+  .icon-list-no-image-highlights__title { margin-bottom: 5px; } }
 
 @media screen and (min-width: 992px) { .icon-list-no-image-highlights { padding: 60px 0; }
   .eaton-grid-control .icon-list-no-image-highlights { padding: 30px 0; }
@@ -63,9 +63,9 @@
   .eaton-grid-control .icon-list-no-image-highlights__wrapper { display: block; }
   .eaton-grid-control .icon-list-no-image-highlights__item { margin-bottom: 40px; }
   .eaton-grid-control .icon-list-no-image-highlights__item:last-child { margin-bottom: 0; }
-  .icon-list-no-image-highlights__text { font-size: 3.75em; line-height: 65px; }
-  .icon-list-no-image-highlights__symbol { font-size: 0.667em; top: -15px; }
-  .icon-list-no-image-highlights__title { font-size: 1.125em; margin-bottom: 15px; } }
+  .icon-list-no-image-highlights__text { font-size: 6rem; line-height: 6.5rem; }
+  .icon-list-no-image-highlights__symbol { font-size: 4rem; top: -15px; }
+  .icon-list-no-image-highlights__title { margin-bottom: 15px; } }
 
 .eaton-top-list-with-icon { margin-top: 45px; overflow: hidden; }
 
