--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/icon-list/css/icon-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/icon-list/css/icon-list.css
@@ -11,32 +11,33 @@
  */
 
 
-.icon-list-proof-points__item { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; }
+.icon-list-proof-points { padding: 45px 0; }
 
-.icon-list-proof-points__image { margin-top: 20px; }
+.icon-list-proof-points__item { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; }
 
 .icon-list-proof-points__image img { width: 80px; }
 
 .icon-list-proof-points__content { padding-left: 40px; }
 
-.icon-list-proof-points__text { font-weight: bold; color: #00B2A9; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; margin-left: -3px; }
+.icon-list-proof-points__text { font-family: 'EatonBold'; color: #00B2A9; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; margin-left: -3px; }
 
 .icon-list-proof-points__symbol { position: relative; }
 
-@media screen and (max-width: 991px) { .icon-list-proof-points__item { -webkit-box-pack: center; -webkit-justify-content: center; -ms-flex-pack: center; justify-content: center; margin-bottom: 40px; }
+@media screen and (max-width: 991px) { .icon-list-proof-points__item { -webkit-box-pack: center; -webkit-justify-content: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; margin-bottom: 40px; }
   .icon-list-proof-points__item:last-child { margin-bottom: 0; }
-  .icon-list-proof-points__text { font-size: 83px; }
-  .icon-list-proof-points__symbol { font-size: 40px; top: 13px; }
-  .icon-list-proof-points__title { font-size: 18px; } }
+  .icon-list-proof-points__text { font-size: 8.3rem; line-height: 8.5rem; }
+  .icon-list-proof-points__symbol { font-size: 4rem; line-height: 4rem; top: 13px; }
+  .icon-list-proof-points__title { font-family: Arial, sans-serif; font-size: 2.4rem; font-weight: normal; line-height: 3.8rem; } }
 
 @media screen and (min-width: 992px) { .icon-list-proof-points__wrapper { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-flex-wrap: nowrap; -ms-flex-wrap: nowrap; flex-wrap: nowrap; }
   .eaton-grid-control .icon-list-proof-points__wrapper { display: block; }
   .icon-list-proof-points__item { -webkit-flex-basis: 33.33%; -ms-flex-preferred-size: 33.33%; flex-basis: 33.33%; }
   .eaton-grid-control .icon-list-proof-points__item { -webkit-flex-basis: 100%; -ms-flex-preferred-size: 100%; flex-basis: 100%; margin-bottom: 40px; }
   .eaton-grid-control .icon-list-proof-points__item:last-child { margin-bottom: 0; }
-  .icon-list-proof-points__text { font-size: 75px; }
-  .icon-list-proof-points__symbol { font-size: 45px; top: 8px; }
-  .icon-list-proof-points__title { font-size: 24px; } }
+  .icon-list-proof-points__image { margin-top: 20px; }
+  .icon-list-proof-points__text { font-size: 10rem; line-height: 10.5rem; }
+  .icon-list-proof-points__symbol { font-size: 6rem; line-height: 6rem; top: 8px; }
+  .icon-list-proof-points__title { font-family: Arial, sans-serif; font-size: 1.8rem; font-weight: normal; line-height: 2.4rem; } }
 
 .icon-list-no-image-highlights { background: #F8F8F8; }
 
