EATON-558: bugfixing on search placeholder

--- a/eaton.frontend/src/components/footer/css/footer.scss
+++ b/eaton.frontend/src/components/footer/css/footer.scss
@@ -71,6 +71,10 @@
   display: none;
   z-index: 1; // Fixes issue the button can't be clicked / The content overlaps this button
 
+  @include media-mobile-only {
+    bottom: 3rem;
+  }
+
   &.visible {
     display: block;
   }
