--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/footer/css/footer.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/footer/css/footer.css
@@ -33,6 +33,8 @@
 
 .eaton-footer-back-to-top { position: fixed; bottom: 6rem; height: 5.8rem; width: 5.8rem; background-color: #FFF; right: 3rem; -webkit-box-shadow: 1px 1px 7px 0px rgba(0, 0, 0, 0.15); box-shadow: 1px 1px 7px 0px rgba(0, 0, 0, 0.15); cursor: pointer; display: none; z-index: 1; }
 
+@media screen and (max-width: 767px) { .eaton-footer-back-to-top { bottom: 3rem; } }
+
 .eaton-footer-back-to-top.visible { display: block; }
 
 .eaton-footer-back-to-top .icon { font-size: 3rem; display: block; width: 100%; height: 100%; text-align: center; color: #005EB8; line-height: 6.5rem; }
