[Font-size-updates]   M23 - Proof Points + [EATON-476, 540]

--- a/eaton.frontend/src/components/icon-list/css/views/_view-proof-points.scss
+++ b/eaton.frontend/src/components/icon-list/css/views/_view-proof-points.scss
@@ -29,13 +29,16 @@
     position: relative;
   }
 
+  &__title {
+    margin-top: 10px;
+  }
+
   //-----------------------------------
   // Media-Query: Mobile
   //-----------------------------------
   @include media-mobile-and-tablet {
     &__item {
       justify-content: center;
-      align-items: center;
       margin-bottom: ($spacing__sm ) + 10;
 
       &:last-child {
