--- a/eaton.frontend/src/components/title/css/views/_view-witheyebrowbyline.scss
+++ b/eaton.frontend/src/components/title/css/views/_view-witheyebrowbyline.scss
@@ -9,7 +9,7 @@ h2.eaton-title__eyebrow-and-byline {
 }
 
 .eaton-title--eyebrow-and-byline {
-  margin-top: $spacing__lg;
+  margin-top: $spacing__sm;
 }
 
 // .eaton-title--eyebrow-and-byline .article-list-single-feature--border{
