--- a/eaton.frontend/src/components/ttil/css/views/_view-feature-block.scss
+++ b/eaton.frontend/src/components/ttil/css/views/_view-feature-block.scss
@@ -4,22 +4,17 @@
 
   &__image {
     text-align: center;
+    position: relative;
+    min-height: 92.6666vw;
 
-    .rendition {
-      img {
-        width: 100%;
-        height: auto;
+    @include media-tablet-only{
+      min-height: 60vw;
+      min-width: 48vw;
+    }
 
-        @include media-tablet-only {
-          width: 330px;
-          height: 400px;
-        }
-
-        @include media-desktop-and-up {
-          width: 665px;
-          height: 665px;
-        }
-      }
+    @include media-desktop-and-up {
+      min-height: 44vw;
+      min-width: 44vw;
     }
   }
 
@@ -56,9 +51,8 @@
     }
 
     &__text-container {
-      width: calc(100% - 484px);
       order: 2;
-      padding-right: 80px;
+      padding-right: 20px;
       padding-left: 80px;
 
     }
@@ -78,8 +72,12 @@
           padding-right: 80px;
           padding-left: 0;
 
-          @include media-tablet-only {
+          @include media-tablet-and-up {
             padding-left: 40px;
+          }
+
+          @include media-desktop-large {
+            padding-left: 0;
           }
         }
       }
