--- a/eaton.frontend/src/components/ttil-list/css/views/_view-quotes.scss
+++ b/eaton.frontend/src/components/ttil-list/css/views/_view-quotes.scss
@@ -3,22 +3,24 @@
 
   &__image {
     text-align: center;
-
-    .rendition {
-      img {
-        width: 100%;
-        height: auto;
-      }
-    }
-
+    width: 100%;
+    height: 62vw;
+    position: relative;
 
     &__icon {
-      margin-top: -31px;
+      bottom: -31px;
+      position: absolute;
+      transform: translateX(-50%);
 
     }
   }
 
   &__text-container {
+
+    @include media-mobile-only {
+      padding: $spacing__md $spacing__md / 2 $spacing__sm $spacing__lg / 2;
+    }
+
     padding: $spacing__md / 2 $spacing__sm $spacing__lg / 2;
     color: $color__white;
   }
@@ -54,20 +56,14 @@
       display: inline-block;
       position: relative;
       order: 1;
-
-      .rendition {
-        img {
-          width: 484px;
-          height: 484px;
-        }
-      }
+      width: 484px;
+      height: 484px;
 
       &__icon {
         margin: 0;
-        position: absolute;
         left: 100%;
         top: 50%;
-        transform: translateX(-50%);
+        bottom: 0;
       }
     }
 
