--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil/css/ttil.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil/css/ttil.css
@@ -58,8 +58,7 @@
 .feature-block-component__text-container--white { color: #FFF; }
 
 @media screen and (min-width: 768px) { .feature-block-component { width: 100%; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; }
-  .feature-block-component__image { display: inline-block; position: relative; -webkit-box-ordinal-gro
-	up: 2; -webkit-order: 1; -ms-flex-order: 1; order: 1; }
+  .feature-block-component__image { display: inline-block; position: relative; -webkit-box-ordinal-group: 2; -webkit-order: 1; -ms-flex-order: 1; order: 1; }
   .feature-block-component__text-container { -webkit-box-ordinal-group: 3; -webkit-order: 2; -ms-flex-order: 2; order: 2; padding-right: 20px; padding-left: 80px; }
   .feature-block-component__right { margin-left: 0; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; }
   .feature-block-component__right .feature-block-component__image { -webkit-box-ordinal-group: 3; -webkit-order: 2; -ms-flex-order: 2; order: 2; }
