--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/featured-topic/css/featured-topic.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/featured-topic/css/featured-topic.css
@@ -19,11 +19,11 @@
 
 .eaton-featured-topic__button-container { margin-top: 60px; }
 
-.eaton-featured-topic .eaton-link-list-vertical__eyebrow { font-family: Arial, sans-serif; font-size: 2.2rem; font-weight: bold; line-height: 2.9rem; }
+.eaton-featured-topic .eaton-link-list-vertical__eyebrow { font-family: Arial, sans-serif; font-size: 2.2rem; font-weight: bold; line-height: 2.9rem; text-transform: none; }
 
 @media screen and (min-width: 992px) { .eaton-featured-topic .eaton-link-list-vertical__eyebrow { font-family: Arial, sans-serif; font-size: 3rem; font-weight: bold; line-height: 4.2rem; } }
 
-.eaton-featured-topic .eaton-link-list-vertical__list-link { font-family: Arial, sans-serif; font-size: 2rem; font-weight: bold; line-height: 3rem; font-family: "EatonBold", Arial, sans-serif; color: #005EB8; }
+.eaton-featured-topic .eaton-link-list-vertical__list-link { font-family: Arial, sans-serif; font-size: 2rem; font-weight: bold; line-height: 3rem; font-family: "EatonBold", Arial, sans-serif; }
 
 @media screen and (min-width: 992px) { .eaton-featured-topic .eaton-link-list-vertical__list-link { font-family: Arial, sans-serif; font-size: 2.6rem; font-weight: bold; line-height: 4rem; } }
 
