--- a/eaton.frontend/src/components/ttil-list/css/views/_view-category-hero.scss
+++ b/eaton.frontend/src/components/ttil-list/css/views/_view-category-hero.scss
@@ -45,11 +45,7 @@
 
   .image-mask & {
     &__image::before {
-      @include absolute-fill;
-      background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.75) 15%, rgba(0, 0, 0, 0) 100%);
-
-      content: '';
-      z-index: 2;
+      @include image-mask-gradient();
     }
   }
 
