--- a/eaton.frontend/src/global/css/_config/mixins/_mixins.scss
+++ b/eaton.frontend/src/global/css/_config/mixins/_mixins.scss
@@ -46,6 +46,18 @@ $base-size: $base__font-size;
   width: 100%;
 }
 
+
+// Appearance
+//--------------
+// EATON-474: Category Hero, Landing Hero - Semi-Transparent gradient should be applied on the whole image
+@mixin image-mask-gradient() {
+  @include absolute-fill;
+  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.75) 15%, rgba(0, 0, 0, 0) 100%);
+
+  content: '';
+  z-index: 2;
+}
+
 // Clearfix (from Bootstrap v3.3.7)
 //
 // For modern browsers
