--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil/css/ttil.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil/css/ttil.css
@@ -11,17 +11,23 @@
  */
 
 
-.l2-hero { position: relative; height: 400px; }
+.l2-hero { position: relative; }
 
 .l2-hero--vertical-align { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; }
 
+.l2-hero__content { position: relative; padding: 15px 0; width: 100%; }
+
 .l2-hero__title, .l2-hero__text { color: #FFF; }
 
-.l2-hero__text { font-size: 2.8rem; line-height: 4.4rem; }
+.l2-hero__title { margin-bottom: 0; }
 
-@media screen and (min-width: 768px) { .l2-hero__text { font-size: 2.0rem; line-height: 3.2rem; } }
+.l2-hero__text { margin-top: 18px; }
 
-@media screen and (min-width: 992px) { .l2-hero { height: 450px; } }
+@media screen and (max-width: 991px) { .l2-hero { height: 83.73333vw; min-height: 370px; max-height: 500px; }
+  .l2-hero__text { font-size: 1.4rem; line-height: 2.2rem; } }
+
+@media screen and (min-width: 992px) { .l2-hero { height: 34.61538vw; }
+  .l2-hero__text { font-size: 2rem; line-height: 3.2rem; margin-top: 12px; } }
 
 .eaton-single-feature__headline, .eaton-single-feature__image { margin-bottom: 30px; }
 
