--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/category-highlight/css/category-highlight.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/category-highlight/css/category-highlight.css
@@ -11,7 +11,7 @@
  */
 
 
-@media screen and (max-width: 767px) { .category-highlight__bottom { margin-top: -15%; } }
+@media screen and (max-width: 767px) { .category-highlight__bottom { margin-top: -60px; } }
 
 @media screen and (min-width: 768px) and (max-width: 991px) { .category-highlight__bottom { margin-top: -13%; } }
 
