bug fixing for featured story

--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil-list/css/ttil-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/ttil-list/css/ttil-list.css
@@ -63,28 +63,30 @@
 
 .featured-story-component .rendition__image { width: 100%; }
 
-.featured-story-component__content { padding: 60px 40px; }
+.featured-story-component__content { padding: 60px 50px; }
 
-.featured-story-component__text { color: #FFF; font-size: 2.3em; font-family: "Eaton", Arial, sans-serif; line-height: 1.25em; padding-top: 30px; }
+.featured-story-component__text { color: #FFF; padding-top: 30px; }
 
 .featured-story-component__row--nopadding { padding: 0; }
 
 .featured-story-component__arrow { font-size: 0.7em; left: 10px; }
 
-.featured-story-component__title { font-size: 2.55em; }
+.featured-story-component__title { color: #FFF; }
 
 .featured-story-component__link:hover, .featured-story-component__link:active, .featured-story-component__link:focus { text-decoration: none; color: #FFF; }
 
-.featured-story-component__blue { position: absolute; top: 0; height: 100%; background-color: #005EB8; color: #FFF; opacity: 0.8; padding: 0; }
+.featured-story-component__blue { position: absolute; top: 0; height: 100%; background-color: rgba(0, 94, 184, 0.8); color: #FFF; padding: 0; }
 
 .featured-story-component__blue--right { right: 0; }
 
 .featured-story-component__blue--left { left: 0; }
 
 @media screen and (max-width: 767px) { .featured-story-component__blue { position: relative; }
+  .featured-story-component__content { padding: 30px 40px; }
   .featured-story-component__row { padding-bottom: 20px; } }
 
-@media screen and (min-width: 768px) and (max-width: 991px) { .featured-story-component__text { padding-top: 15px; font-size: 1.6em; } }
+@media screen and (min-width: 768px) and (max-width: 991px) { .featured-story-component__text { padding-top: 15px; width: 250px; }
+  .featured-story-component__content { padding: 60px 30px 60px 50px; } }
 
 @media screen and (min-width: 768px) { .tile-link-component__container { padding: 0 15px; } }
 
