--- a/eaton.frontend/src/components/ttil-list/css/views/_view-featured-story.scss
+++ b/eaton.frontend/src/components/ttil-list/css/views/_view-featured-story.scss
@@ -7,14 +7,11 @@
   }
 
   &__content {
-    padding: 60px 40px;
+    padding: 60px 50px;
   }
 
   &__text {
     color: $color__white;
-    font-size: 2.3em;
-    font-family: $font-family__primary;
-    line-height: 1.25em;
     padding-top: 30px;
   }
 
@@ -31,7 +28,7 @@
   }
 
   &__title {
-    font-size: 2.55em;
+    color: $color__white;
   }
 
   &__link {
@@ -48,9 +45,8 @@
     position: absolute;
     top: 0;
     height: 100%;
-    background-color: $color__primary-blue;
+    background-color: transparentize($color__primary-blue, 0.2);
     color: $color__white;
-    opacity: 0.8;
     padding: 0;
 
     &--right {
@@ -70,6 +66,10 @@
       position: relative;
     }
 
+    &__content {
+      padding: 30px 40px;
+    }
+
     &__row {
       padding-bottom: 20px;
     }
@@ -80,7 +80,11 @@
 
     &__text {
       padding-top: 15px;
-      font-size: 1.6em;
+      width: 250px;
+    }
+
+    &__content {
+      padding: 60px 30px 60px 50px;
     }
 
   }
