--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/ttil-list/views/view-featured-story.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/ttil-list/views/view-featured-story.html
@@ -13,10 +13,10 @@
 
           <div class="col-xs-12 col-sm-5 col-lg-4 featured-story-component__blue ${componentList.odd ? 'featured-story-component__blue--right' : 'featured-story-component__blue--left'}">
             <div class="featured-story-component__content">
-              <h2 class="featured-story-component__title">${component.title}</h2>
+              <p class="featured-story-component__title b-eyebrow-large">${component.title}</p>
               <a class="featured-story-component__link" href="${component.link}">
-                <p class="featured-story-component__text">${component.text}
-                  <i aria-hidden="true" class="featured-story-component__arrow glyphicon glyphicon-menu-right arrow"></i></p>
+                <h2 class="featured-story-component__text">${component.text}
+                  <i aria-hidden="true" class="featured-story-component__arrow glyphicon glyphicon-menu-right arrow"></i></h2>
               </a>
             </div>
           </div>
