[EATON-349][EATON-461] Update dev comments

--- a/eaton.frontend/src/shared/module-anchor-links/css/module-anchor-links.scss
+++ b/eaton.frontend/src/shared/module-anchor-links/css/module-anchor-links.scss
@@ -91,7 +91,7 @@
 
 
   //-----------------------------------
-  // IE11 Hack - http://browserhacks.com/
+  // IE11 Styles - http://browserhacks.com/
   //-----------------------------------
   @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
     /* IE11 and Up */
