--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/product-grid/css/product-grid.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/product-grid/css/product-grid.css
@@ -61,7 +61,6 @@
 .product-grid-results--family .results-list__content { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; -webkit-flex-wrap: wrap; -ms-flex-wrap: wrap; flex-wrap: wrap; }
 
 @media screen and (max-width: 991px) { .product-grid-results--family .container { width: 100%; }
-  .product-grid-results--family .results-list { margin-left: -30px; margin-right: -30px; }
   .product-grid-results--family .results-list__bottom { margin-top: 0; } }
 
 .product-card-family { position: relative; width: 100%; margin-bottom: 42px; }
@@ -74,11 +73,11 @@
 
 .product-card-family__name { color: #005EB8; font-family: Arial, "Arial", sans-serif; font-size: 24px; font-weight: bold; line-height: 26px; margin-top: 18px; margin-bottom: 0; }
 
-@media screen and (max-width: 767px) { .product-card-family { width: 100%; max-width: 440px; margin-left: auto; margin-right: auto; }
-  .product-card-family__content-wrapper { padding: 0 30px; } }
+@media screen and (max-width: 767px) { .product-card-family { width: 100%; max-width: 440px; margin-left: auto; margin-right: auto; } }
 
-@media screen and (min-width: 768px) and (max-width: 991px) { .product-card-family { width: 50%; }
-  .product-card-family__content-wrapper { padding: 0 30px; } }
+@media screen and (min-width: 768px) and (max-width: 991px) { .product-card-family { width: 50%; } }
+
+@media screen and (max-width: 991px) { .product-card-family__image-wrapper { margin-left: -30px; margin-right: -30px; } }
 
 @media screen and (min-width: 992px) { .product-card-family { width: 32%; margin-right: 2%; margin-bottom: 52px; }
   .product-card-family:nth-child(3n+3) { margin-right: 0; }
