revert slick global styling

--- a/eaton.frontend/src/shared/module-related-products/css/module-related-products.scss
+++ b/eaton.frontend/src/shared/module-related-products/css/module-related-products.scss
@@ -26,6 +26,15 @@
 
     button {
       background-color: $color__secondary-gray5;
+      height: 10px;
+      width: 10px;
+      border: 10px;
+      line-height: 0;
+      display: inline;
+      padding: 5px;
+      cursor: pointer;
+      color: transparent;
+      border-radius: 10px;
     }
   }
 
