--- a/eaton.frontend/src/global/css/base/elements/_buttons.scss
+++ b/eaton.frontend/src/global/css/base/elements/_buttons.scss
@@ -1,6 +1,15 @@
 //-----------------------------------
 // Styleguide - Buttons
 //-----------------------------------
+.eaton-cta {
+  text-align: center;
+
+  @include media-desktop-and-up {
+    text-align: left;
+  }
+}
+
+
 
 .button--reset {
   border: 0;
@@ -167,3 +176,4 @@
   }
 
 }
+
