--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
@@ -271,9 +271,13 @@ h5 a, .b-heading-h5 a { color: #005EB8; }
 
 @media screen and (min-width: 992px) { .u-visible-desktop { display: block; } }
 
+.eaton-cta { text-align: center; }
+
+@media screen and (min-width: 992px) { .eaton-cta { text-align: left; } }
+
 .button--reset { border: 0; border-radius: 0; background: none; padding: 0; -webkit-appearance: none; -moz-appearance: none; appearance: none; }
 
-.b-button { background: none; text-shadow: none; border-radius: 0; border-style: solid; display: inline-block; font-weight: bold; max-width: 600px; width: 100%; }
+.b-button { background: none; text-shadow: none; border-radius: 0; border-style: solid; display: inline-block; font-weight: bold; max-width: 600px; width: 100%; text-align: center; }
 
 .b-button__primary { border-width: 3px; font-size: 1.9rem; padding: 20px 40px; }
 
