Disable global styles in CTA due to regressions in several components

--- a/eaton.frontend/src/global/css/base/elements/_buttons.scss
+++ b/eaton.frontend/src/global/css/base/elements/_buttons.scss
@@ -1,6 +1,8 @@
 //-----------------------------------
 // Styleguide - Buttons
 //-----------------------------------
+
+/*
 .eaton-cta {
   text-align: center;
 
@@ -8,8 +10,7 @@
     text-align: left;
   }
 }
-
-
+*/
 
 .button--reset {
   border: 0;
@@ -176,4 +177,3 @@
   }
 
 }
-
