[EATON-358] FIX - Autocorrected Search - Font size issue

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-autocorrected-search.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-autocorrected-search.html
@@ -1,6 +1,6 @@
 <template data-sly-template.module="${ @ data }">
   <div class="autocorrected-search">
-    <div class="container">
+    <div class="container b-body-copy">
       <div class="autocorrected-search__results">
         <strong class="autocorrected-search__results-label">${ 'Showing results for' @ i18n }
           <em class="autocorrected-search__results-term">${ data.correctedTerm }</em> </strong>
