--- a/eaton.frontend/src/shared/module-autocorrected-search/css/module-autocorrected-search.scss
+++ b/eaton.frontend/src/shared/module-autocorrected-search/css/module-autocorrected-search.scss
@@ -14,7 +14,7 @@
 .autocorrected-search {
 
   margin-top: 50px;
-  font-size: 24px;
+  // font-size: 24px;
 
 
   //-----------------------------------
