--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-autocorrected-search/css/module-autocorrected-search.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-autocorrected-search/css/module-autocorrected-search.css
@@ -11,7 +11,7 @@
  */
 
 
-.autocorrected-search { margin-top: 50px; font-size: 24px; }
+.autocorrected-search { margin-top: 50px; }
 
 @media screen and (max-width: 991px) { .autocorrected-search__search-instead { display: block; } }
 
