--- a/eaton.frontend/src/components/text/css/views/_view-default.scss
+++ b/eaton.frontend/src/components/text/css/views/_view-default.scss
@@ -2,7 +2,9 @@
 // Component: Text - View: Default
 //-----------------------------------
 .eaton-text-default {
-	h3{
-		font-size: 18px;
-	}
+
+  // EATON-462 - T9: Next Steps - Eyebrows should be the same font size
+  h3 {
+    font-size: 1.8rem;
+  }
 }
