[Styleguide] Add ChangeLog Section - Minor UI Adjustements

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/styleguide/partials/styleguide-scss-helpers.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/styleguide/partials/styleguide-scss-helpers.html
@@ -87,7 +87,7 @@
         <div class="panel-heading" role="tab" id="sg-scss-helpers-heading-2">
           <h4 class="panel-title">
             <a class="u-show collapsed" role="button" data-toggle="collapse" data-parent="#sg-scss-helpers-accordion" href="#sg-scss-helpers-pane-2" aria-expanded="false" aria-controls="sg-scss-helpers-pane-2">
-              Buttons
+              CTA / Buttons
             </a>
           </h4>
         </div>
