[EATON-445] Review and Modify Product Grid data model with TCS feedback

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-grid/views/partials/results-list-bottom.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-grid/views/partials/results-list-bottom.html
@@ -12,7 +12,7 @@
         data-sly-test="${ data.ajaxRequestUrl }"
         class="b-button b-button__primary b-button__primary--light"
         role="button"
-        data-load-more>${ 'Load More' @ i18n }</button>
+        data-load-more>${ data.loadMoreLabel }</button>
     </div>
   </div>
 
