--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/search/search-results/views/partials/content-type--family.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/search/search-results/views/partials/content-type--family.html
@@ -17,9 +17,9 @@
         class="results-list-submodule__image-link"
         target="${ data.contentItem.link.target }"
       >
-        <img src="${ data.contentItem.imgSrc }"
+        <img src="${ data.contentItem.image.src }"
           class="results-list-submodule__image"
-          alt="${ data.contentItem.imgAlt }" />
+          alt="${ data.contentItem.image.altText }" />
         </a>
     </div>
 
