--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-tabs.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-tabs.html
@@ -30,8 +30,7 @@
             <div
               data-sly-test="${ tab.isADisabledTab }"
               class="module-tabs__list-link"
-            >${ '{0} ({1})' @ format=[tab.label, tab.resultsCount] }
-            </div>
+            >${ '{0} ({1})' @ format=[tab.label, tab.resultsCount] }</div>
           </li>
         </sly>
 
