--- a/eaton.frontend/src/shared/module-results-list/css/_results-list-submodules.scss
+++ b/eaton.frontend/src/shared/module-results-list/css/_results-list-submodules.scss
@@ -28,7 +28,7 @@
     margin-bottom: 3px;
   }
 
-  &__document{
+  &__document {
     margin-bottom: 1px;
   }
 
@@ -121,7 +121,7 @@
       width: 100%;
     }
 
-    &.results-list-submodule--type-resource{
+    &--type-resource {
       margin-bottom: 44px;
     }
 
