--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/search/search-results/views/view-default.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/search/search-results/views/view-default.html
@@ -39,7 +39,7 @@
         <!--/* M-60: Results List */-->
         <div class="col-xs-12 col-md-9">
           <sly data-sly-use.tpl="views/partials/results-list.html">
-            <sly data-sly-call="${ tpl.module @ data=data.search }"></sly>
+            <sly data-sly-call="${ tpl.module @ data=data.search, results=data.search.searchResults }"></sly>
           </sly>
         </div>
 
