--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-faceted-navigation/faceted-navigation.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-faceted-navigation/faceted-navigation.html
@@ -2,10 +2,10 @@
 <template data-sly-template.module="${ @ data, search }">
   <div class="faceted-navigation eaton-form">
     <div class="mobile-header b-body-copy">
-      <span>${ 'Filters' @ i18n } </span>
+      <span>${ data.filtersLabel }</span>
 
       <button data-toggle-modal-facet class="close-facets-mobile button--reset">
-        <span class="sr-only">${ 'Close Filters' @ i18n }</span>
+        <span class="sr-only">${ data.closeFiltersLabel }</span>
         <i class="icon icon-close" aria-hidden="true"></i>
       </button>
     </div>
@@ -14,12 +14,12 @@
       <sly data-sly-call="${ tpl.module @ activeFilters=search.activeFilters }"></sly>
     </sly>
 
-    <h4 class="hidden-sm hidden-xs">${ 'Narrow Results' @ i18n }</h4>
+    <h4 class="hidden-sm hidden-xs">${ data.facetLabel }</h4>
 
     <sly data-sly-list="${ data.facetItems }">
 
       <!--/* Open/Add Wrapper div used to toggle Facets Visiblity (View More) */-->
-      <sly data-sly-test="${ itemList.index == data.config.facetItemsMinVisible }">
+      <sly data-sly-test="${ itemList.index == data.config.facetGroupsMinVisible }">
         <div class="u-hide faceted-navigation__more-facets">
       </sly>
 
@@ -28,8 +28,8 @@
       <div class="faceted-navigation__facet-group">
 
         <!--/* Loop variables - facet gruop */-->
-        <sly data-sly-test.isGroupExpanded="${ itemList.index < data.config.facetItemsMinVisible }" />
-        <sly data-sly-test.facetGroupID="${ 'facet-{0}' @ format=[ item.facetId ] }" />
+        <sly data-sly-test.isGroupExpanded="${ itemList.index < data.config.facetGroupsMinVisible }" />
+        <sly data-sly-test.facetGroupID="${ 'facet-{0}' @ format=[ item.facetGroupId ] }" />
         <sly data-sly-test.groupExpandedClass="${ isGroupExpanded ? 'in' : '' }" />
         <sly data-sly-test.facetInputType="${ item.facetType == 'radios' ? 'radio' : 'checkbox' }" />
 
@@ -40,11 +40,11 @@
           aria-expanded="true"
           aria-controls="${ facetGroupID }"
         >
-          <span class="b-body-copy-small">${ item.facetName }</span>
+          <span class="b-body-copy-small">${ item.facetGroupName }</span>
           <i class="icon icon-sign-minus" aria-hidden="true"></i>
-          <i class="icon icon-sign-plus
-                    ${ itemList.index < data.config.facetItemsMinVisible ? 'u-hide' : '' }"
-             aria-hidden="true"></i>
+          <i class="icon icon-sign-plus ${
+            itemList.index < data.config.facetGroupsMinVisible ? 'u-hide' : '' }"
+            aria-hidden="true"></i>
         </button>
 
         <!--/* Facet Values */-->
@@ -52,23 +52,23 @@
 
           <ul data-sly-list.facetValue="${ item.facetValues }" class="faceted-navigation__list">
 
-            <!--/* Loop variables - facet valu*/-->
-            <sly data-sly-test.facetItemID="${ '{0}-{1}' @ format=[ facetGroupID, facetValue.id ] }" />
+            <!--/* Loop variables - facet values */-->
+            <sly data-sly-test.facetItemID="${ '{0}-{1}' @ format=[ facetGroupID, facetValue.facetId ] }" />
             <sly data-sly-test.hiddenFacetClass="${ facetValueList.count > data.config.facetValuesMinVisible ? 'u-hide' : '' }" />
             <sly data-sly-test.showViewMore="${ item.facetValues.length > data.config.facetValuesMinVisible && facetValueList.last }" />
 
             <li class="faceted-navigation__list-item ${ hiddenFacetClass }" >
               <div class="faceted-navigation__facet-value">
                 <label class="label" for="${ facetItemID }">
-                  <a target="${ facetvalue.target }" href="${ facetValue.url }">
+                  <a target="${ facetvalue.target }" href="${ facetValue.facetURL }">
                     <input id="${ facetItemID }"
                       class="input input--small"
-                      data-sly-attribute.checked="${ facetvalue.isChecked }"
+                      data-sly-attribute.checked="${ facetvalue.facetIsChecked }"
                       value="${ facetItemID }"
                       type="${ facetInputType }"
                     >
                     <span class="inner">
-                      ${ facetValue.label }
+                      ${ facetValue.facetLabel }
                     </span>
                   </a>
                 </label>
@@ -78,7 +78,7 @@
             <!--/* If there are more Facet Values than the configured amount, show "View More" button */-->
             <sly data-sly-test="${ showViewMore }">
               <button class="button--reset faceted-navigation__view-more-values"
-                data-facets-more-values >${ 'View more' @ i18n }</button>
+                data-facets-more-values >${ data.viewMoreLabel }</button>
             </sly>
           </ul>
         </div>
@@ -87,11 +87,11 @@
 
 
       <!--/* Close Wrapper <div> that hides additional facet-items, and Add Button that shows more Facet Items */-->
-      <sly data-sly-test="${ itemList.count == data.config.facetItemsMinVisible && itemList.last }">
+      <sly data-sly-test="${ itemList.count == data.config.facetGroupsMinVisible && itemList.last }">
         </div>
 
         <button class="faceted-navigation__view-more-groups button--reset" data-facets-more-groups>
-          <strong>${ 'View more' @ i18n }</strong>
+          <strong>${ data.viewMoreLabel }</strong>
         </button>
       </sly>
 
@@ -101,8 +101,7 @@
       <button
           data-toggle-modal-facet
           class="b-button-facets-apply b-button b-button__tertiary b-button__tertiary--light"
-          data-facets-apply>
-          ${ 'Done' @ i18n }
+          data-facets-apply >${ data.applyLabel }
         </button>
     </div>
 
