--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/product-grid/css/product-grid.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/product-grid/css/product-grid.css
@@ -58,27 +58,27 @@
   .product-card-sku__attrs-list-item { -webkit-box-flex: 1; -webkit-flex: 1; -ms-flex: 1; flex: 1; }
   .product-card-sku__description { font-family: Arial, sans-serif; font-size: 1.8rem; font-weight: normal; line-height: 2.4rem; } }
 
-.product-grid-results--family .results-list__content { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; -webkit-flex-wrap: wrap; -ms-flex-wrap: wrap; flex-wrap: wrap; }
+.product-grid-results--subcategory .results-list__content { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; -webkit-flex-wrap: wrap; -ms-flex-wrap: wrap; flex-wrap: wrap; }
 
-@media screen and (max-width: 991px) { .product-grid-results--family .container { width: 100%; }
-  .product-grid-results--family .results-list__bottom { margin-top: 0; } }
+@media screen and (max-width: 991px) { .product-grid-results--subcategory .container { width: 100%; }
+  .product-grid-results--subcategory .results-list__bottom { margin-top: 0; } }
 
-.product-card-family { position: relative; width: 100%; margin-bottom: 42px; }
+.product-card-subcategory { position: relative; width: 100%; margin-bottom: 42px; }
 
-.product-card-family__link { position: absolute; left: 0; top: 0; height: 100%; width: 100%; z-index: 1; }
+.product-card-subcategory__link { position: absolute; left: 0; top: 0; height: 100%; width: 100%; z-index: 1; }
 
-.product-card-family__image-wrapper { text-align: center; padding: 0 20px; position: relative; padding-top: 100%; margin-bottom: 22px; }
+.product-card-subcategory__image-wrapper { text-align: center; padding: 0 20px; position: relative; padding-top: 100%; margin-bottom: 22px; }
 
-.product-card-family__image { position: absolute; background-color: #F8F8F8; border: 1px solid #EEF0F2; max-width: 100%; top: 0; left: 0; padding: 20px; height: 100%; width: 100%; }
+.product-card-subcategory__image { position: absolute; background-color: #F8F8F8; border: 1px solid #EEF0F2; max-width: 100%; top: 0; left: 0; padding: 20px; height: 100%; width: 100%; }
 
-.product-card-family__name { color: #005EB8; font-family: Arial, "Arial", sans-serif; font-size: 24px; font-weight: bold; line-height: 26px; margin-top: 18px; margin-bottom: 0; }
+.product-card-subcategory__name { color: #005EB8; font-family: Arial, "Arial", sans-serif; font-size: 24px; font-weight: bold; line-height: 26px; margin-top: 18px; margin-bottom: 0; }
 
-@media screen and (max-width: 767px) { .product-card-family { width: 100%; max-width: 440px; margin-left: auto; margin-right: auto; } }
+@media screen and (max-width: 767px) { .product-card-subcategory { width: 100%; max-width: 440px; margin-left: auto; margin-right: auto; } }
 
-@media screen and (min-width: 768px) and (max-width: 991px) { .product-card-family { width: 50%; } }
+@media screen and (min-width: 768px) and (max-width: 991px) { .product-card-subcategory { width: 50%; } }
 
-@media screen and (max-width: 991px) { .product-card-family__image-wrapper { margin-left: -30px; margin-right: -30px; } }
+@media screen and (max-width: 991px) { .product-card-subcategory__image-wrapper { margin-left: -30px; margin-right: -30px; } }
 
-@media screen and (min-width: 992px) { .product-card-family { width: 32%; margin-right: 2%; margin-bottom: 52px; }
-  .product-card-family:nth-child(3n+3) { margin-right: 0; }
-  .product-card-family__name { font-size: 28px; line-height: 32px; } }
+@media screen and (min-width: 992px) { .product-card-subcategory { width: 32%; margin-right: 2%; margin-bottom: 52px; }
+  .product-card-subcategory:nth-child(3n+3) { margin-right: 0; }
+  .product-card-subcategory__name { font-size: 28px; line-height: 32px; } }
