--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-results-list/css/module-results-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-results-list/css/module-results-list.css
@@ -52,6 +52,6 @@
   .results-list-submodule__image-wrapper { min-width: 140px; margin-right: 30px; padding-top: 8px; }
   .results-list-submodule__image { max-width: 140px; }
   .results-list-submodule__content-wrapper { width: 100%; }
-  .results-list-submodule.results-list-submodule--type-resource { margin-bottom: 44px; }
+  .results-list-submodule--type-resource { margin-bottom: 44px; }
   .results-list-submodule__icon-wrapper { width: 48px; margin-right: 30px; padding-top: 8px; }
   .results-list-submodule__icon-wrapper .icon { color: #005EB8; font-size: 48px; } }
