[EATON-474] Add Dev comments

--- a/eaton.frontend/src/components/ttil-list/css/views/_view-category-hero.scss
+++ b/eaton.frontend/src/components/ttil-list/css/views/_view-category-hero.scss
@@ -43,6 +43,8 @@
     }
   }
 
+  // EATON-474: Category Hero, Landing Hero - Semi-Transparent gradient should be applied on the whole image
+  //--------------
   .image-mask & {
     &__image::before {
       @include image-mask-gradient();
