[EATON-538] FIX- Feature Block - CTA should be centered in Mobile.

--- a/eaton.frontend/src/components/ttil/css/views/_view-feature-block.scss
+++ b/eaton.frontend/src/components/ttil/css/views/_view-feature-block.scss
@@ -92,4 +92,18 @@
       margin-left: calc((100% - 1140px) / 2);
     }
   }
+
+
+  //-----------------------------------
+  // Media-Query: 0-991px
+  //-----------------------------------
+  @include media-mobile-only {
+
+    // EATON-538: Feature Block - CTA should be centered in Mobile.
+    &__cta-wrapper {
+      text-align: center;
+    }
+
+  }
+
 }
