--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-feature-block.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-feature-block.html
@@ -13,7 +13,14 @@
             <div class="feature-block-component__text-container ${data.backgroundColor == '#005EB8' ? 'feature-block-component__text-container--white' : ''}">
                 <h2>${data.title}</h2>
                 <div class="feature-block-component__description b-body-copy">${data.text @ context = 'html'}</div>
-                <a data-sly-test="${data.cta.url.length > 0}" class="b-button b-button__primary ${data.backgroundColor == '#005EB8' ? 'b-button__primary--dark' : 'b-button__primary--light'} feature-block-component__cta" href="${data.cta.url}" role="button" data-sly-test="${data.cta.url.length > 0}">${data.cta.text}</a>
+                <div class="feature-block-component__cta-wrapper">
+                  <a data-sly-test="${data.cta.url.length > 0}"
+                    class="b-button b-button__primary feature-block-component__cta ${ data.backgroundColor == '#005EB8' ? 'b-button__primary--dark' : 'b-button__primary--light'}"
+                    href="${data.cta.url}"
+                    role="button"
+                    data-sly-test="${data.cta.url.length > 0}">${data.cta.text}</a>
+                </div>
+
             </div>
         </div>
     </div>
