--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
@@ -11,9 +11,9 @@
  */
 
 
-.icon::before { -moz-osx-font-smoothing: grayscale; -webkit-font-smoothing: antialiased; -webkit-box-sizing: border-box; box-sizing: border-box; display: inline-block; font-family: "eaton-glyphicon"; font-smoothing: antialiased; font-style: normal; font-variant: normal; font-weight: normal; line-height: 1; text-decoration: inherit; text-rendering: optimizeLegibility; text-transform: none; }
+.icon::before, .eaton-form [type="checkbox"]:checked + span::after { -moz-osx-font-smoothing: grayscale; -webkit-font-smoothing: antialiased; -webkit-box-sizing: border-box; box-sizing: border-box; display: inline-block; font-family: "eaton-glyphicon"; font-smoothing: antialiased; font-style: normal; font-variant: normal; font-weight: normal; line-height: 1; text-decoration: inherit; text-rendering: optimizeLegibility; text-transform: none; }
 
-.icon-checkmark::before { content: "\E900"; }
+.icon-checkmark::before, .eaton-form [type="checkbox"]:checked + span::after { content: "\E900"; }
 
 .icon-badge::before { content: "\EA01"; }
 
@@ -404,7 +404,7 @@ h5 a, .b-heading-h5 a { color: #005EB8; }
 
 .eaton-form [type="checkbox"]:not(:checked) + span::before, .eaton-form [type="checkbox"]:checked + span::before { display: block; content: ''; position: absolute; left: 0; top: -8px; width: 2.5em; height: 2.5em; background-color: #eef0f2; }
 
-.eaton-form [type="checkbox"]:checked + span::after { content: '\E900'; font-size: 1.4em; font-family: 'eaton-glyphicon'; line-height: 0.8; color: #005EB8; position: absolute; top: 2px; left: 5px; }
+.eaton-form [type="checkbox"]:checked + span::after { font-size: 1.4em; line-height: 0.8; color: #005EB8; position: absolute; top: 2px; left: 5px; }
 
 .eaton-form [type="checkbox"]:focus + span::before { border-color: #5a99db; -webkit-box-shadow: 0 1px 12px #85bffd; box-shadow: 0 1px 12px #85bffd; outline: 0 none; }
 
@@ -426,7 +426,7 @@ h5 a, .b-heading-h5 a { color: #005EB8; }
 
 .eaton-form .choices { width: 100%; margin-top: 10px; }
 
-.eaton-form .choices__inner { background: #fff url("/content/dam/eaton/images/down_arrow.png") no-repeat; background-position: 98%; background-size: 12px; border-radius: 0; border: 1px solid #8c9aa5; }
+.eaton-form .choices__inner { background: #FFF url("images/down_arrow.png") no-repeat; background-position: 98%; background-size: 12px; border-radius: 0; border: 1px solid #8c9aa5; }
 
 .eaton-form .choices__list .is-highlighted { background-color: #fff; }
 
@@ -435,6 +435,8 @@ h5 a, .b-heading-h5 a { color: #005EB8; }
 .eaton-form .choices__input { border-bottom: 0; }
 
 .eaton-form .choices__item[role="option"] { color: #005EB8; }
+
+.eaton-form .choices__item[role="option"].is-highlighted { background-color: #eef0f2; }
 
 .eaton-form .choices[data-type*=select-one]::after { border: 0; }
 
